# MediaServer

./: .gitignore
src/common/: base_fun.cpp  base_fun.h  types.h
src/server/: CMakeLists.txt  frame_cache.cpp  frame_cache.h  handle_message.cpp  handle_message.h  main.cpp  recieve_server.cpp  recieve_server.h  send_server.cpp  send_server.h  types.h
